@@ -1,0 +1,35 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+Zipato Multisensor Duo
+https://www.zipato.com/wp-content/uploads/2015/09/vs-zp3102-Zipato-Multi-Sensor-Dual-User-Manual-v1.4.pdf
+-->
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+        <!-- COMMAND_CLASS_CONFIGURATION -->
+        <CommandClass id="112">
+                <Value type="byte" genre="config" index="1" label="Re-Trigger Waiting Time" units="minutes" min="1" max="255" value="3">
+                    <Help>Time until an associated device will turn off if no new movement is detected</Help>
+                </Value>
+                <Value type="list" genre="config" index="2" label="Celcius/Fahrenheit" size="1" min="0" max="1" value="0">
+                    <Help>Report temperature in Celcius or Fahrenheit</Help>
+                    <Item label="Celcius" value="0" />
+                    <Item label="Fahrenheit" value="1" />
+                </Value>
+                <Value type="byte" genre="config" index="3" label="Sensitivity" units="" min="1" max="7" value="4">
+                    <Help>Sensitivity 1-7 (1 = most sensitive, 7 = most insensitive. 4 is default)</Help>
+                </Value>
+                <Value type="byte" genre="config" index="4" label="Temperature adjustment" units="Degrees Celsius" min="0" max="255" value="0">
+                    <Help>-10 to -1, 0 to 10 (Signed decimal: 246 to 255, 0 to 10)</Help>
+                </Value>
+        </CommandClass>
+
+        <!-- COMMAND_CLASS_BASIC -->
+        <CommandClass id="32" setasreport="true"/>
+
+        <!-- COMMAND_CLASS_ASSOCIATION -->
+        <CommandClass id="133">
+                <Associations num_groups="1">
+                        <Group index="1" max_associations="5" label="Basic on/off group for detecting movements" />
+                </Associations>
+        </CommandClass>
+
+</Product>
